--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   ],
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
-    "@ember/test-helpers": "^2.2.0",
     "@types/ember": "^3.1.1",
     "@types/ember-qunit": "^3.4.7",
     "@types/ember__test-helpers": "^0.7.9",
@@ -93,6 +92,7 @@
   },
   "dependencies": {
     "@ember/render-modifiers": "^1.0.2",
+    "@ember/test-helpers": "https://github.com/thoov/ember-test-helpers.git#test-embroider",
     "@embroider/macros": "^0.40.0",
     "@embroider/util": "^0.40.0",
     "@glimmer/component": "^1.0.4",
